<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:baselineAligned="false"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:contentDescription="@string/todo"
            android:padding="5dp" />

        <TextView
            android:id="@+id/Id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
            android:text="@string/id" />

        <TextView
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/nombre"
            android:textColor="#FFFF"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
            android:text="@string/precio" />

        <TextView
            android:id="@+id/provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
            android:text="@string/provider" />

        <TextView
            android:id="@+id/Delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
            android:text="@string/delivery" />


    </LinearLayout>

</LinearLayout>